--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Just a bunch of Nerdbirds
+author: Nicole Ryan
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Nerdbird Farm is the family farm or Nicole & Max Ryan, Samuel L Quackson & Gary, our resident ducks, a herd of chickens and our faithful doggos - Mr. Coop & Marvin. 
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+tiktok_username: nerdbirdfarm
+github_username:  nlryan
+facebook_username: nicoleryannn
 
 show_excerpts: true # set to false to remove excerpts on the homepage
