--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,10 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+theme: minima
+title: So many Nerdbirds, so little time..
+author: Nicole Ryan
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Nerdbird Farm is the family farm of Nicole and Max Ryan and their beloved foul and doggos. 
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  nlryan
 
 show_excerpts: true # set to false to remove excerpts on the homepage
